Fixed dark mode display, signup form

--- a/src/App.css
+++ b/src/App.css
@@ -67,3 +67,22 @@ main {
     transform: rotate(360deg);
   }
 }
+
+:root {
+  --background-color: #ffffff;
+  --text-color: #000000;
+  --bulma-body-color: var(--text-color);
+  --bulma-body-background-color: var(--background-color);
+}
+
+[data-theme="dark"] {
+  --background-color: #121212;
+  --text-color: #ffffff;
+  --bulma-body-color: var(--text-color);
+  --bulma-body-background-color: var(--background-color);
+}
+
+body {
+  background-color: var(--background-color) !important;
+  color: var(--text-color) !important;
+}
